=== 3.7 / ??

* Minor enhancements
  * New directive :category: which allows methods to be grouped into sections
    more cleanly.  See RDoc::Markup for details.
  * Document-class for RDoc::Parser::C now supports Foo::CONST as well as
    CONST.
  * ri method output is now a comma-separated list when displayed
    interactively.  Pull Request #39 by Benoit Daloze.
* Bug fixes
  * RDoc::Parser::C no longer creates classes when processing aliases.
  * ri no longer crashes when attempting to complete a plain [.
  * RDoc::Text#strip_stars handles Document-method for methods with =, ! and ?
    now.
  * RDoc::Parser::C now allows .cpp files to be used with the "in" comment on
    rb_define_method.  Bug #35 by Hanmac.
  * RDoc::Parser::Ruby no longer eats content when =begin/=end documentation
    blocks are followed by a documentable item.  Issue #41 by mfn.
  * RDoc::Markup::Formatter and subclasses now allow an optional +markup+
    parameter for adding custom markup.  The example in
    RDoc::Markup::Formatter will now work.  Issue #38 by tsilen.
  * RDoc::Parser::C can now distinguish between class methods and instance
    methods in Document-method.  Issue #36 by Vincent Batts.
  * RDoc now encodes file names in the output encoding.  Issue #33 by Perry
    Smith.
  * ri data generation for method aliases no longer duplicates the class in
    #full_name

=== 3.6.1 / 2011-05-15

* Bug fixes
  * Fix infinite loop created when re-encountering BasicObject.
  * RDoc::Context#each_ancestor is now provided for duck-typing.
  * rb_path2class() can now be used to discover the parent class in
    rb_define_class_under.

=== 3.6 / 2011-05-13

* Major Enhancements
  * Interactive ri is now the default when no names are given.
* Minor Enhancements
  * RDoc::RDoc#generate was added to allow multiple generators to be used with
    a set of parsed file info.
  * RDoc::Options#finish can be called multiple times now.